components/src/components/theme/theme.scss
// Components
@import '../accordion/accordion.scss';
@import '../banner/banner.scss';
@import '../block/block.scss';
@import '../breadcrumb/breadcrumb.scss';
@import '../button/button.scss';
@import '../card/card.scss';
@import '../chips/chips.scss';
@import '../checkbox/checkbox.scss';
@import '../datetime/datetime.scss';
@import '../divider/divider.scss';
@import '../dropdown/dropdown-select.scss';
@import '../footer/footer.scss';
@import '../header/header.scss';
@import '../link/link.scss';
@import '../message/message.scss';
@import '../modal/modal-native.scss';
@import '../tabs/inline-tabs/inline-tabs.scss';
@import '../tabs/inline-tabs-fullbleed/inline-tabs-fullbleed.scss';
@import '../tabs/navigation-tabs/navigation-tabs.scss';
@import '../radio-button/radio-button.scss';
@import '../side-menu/side-menu.scss';
@import '../table/table.scss';
@import '../textfield/textfield.scss';
@import '../toast/toast.scss';
@import '../toggle/toggle.scss';
@import '../stepper/stepper.scss';
@import '../slider/slider.scss';
@import '../../helpers/_utility-classes.scss';

* :focus {
  outline: 2px solid var(--sdds-blue-400);
  outline-offset: -2px;
}

html.#{$prefix},
body.#{$prefix},
.#{$prefix}-body {
  height: 100%;
  padding: 0;

  .#{$prefix}-push {
    padding-top: var(--sdds-header-height);
    align-items: stretch;
    height: 100%;
    overflow: hidden;
  }
  .#{$prefix}-sidebar.expanded {
    display: block;
    position: fixed;
    height: 100%;
    z-index: 100;
  }
  .#{$prefix}-navbar-menu-popover {
    display: none;
  }
  .#{$prefix}-footer {
    margin-top: var(--sdds-spacing-around-footer);
    overflow-x: hidden;
    padding-left: 0;
    padding-right: 0;
  }
  .#{$prefix}-content {
    padding-left: 0;
    padding-right: 0;
    padding-top: var(--sdds-spacing-element-16);
    overflow-y: auto;
  }

  @media all and (min-width: 992px) {
    .#{$prefix}-sidebar.expanded {
      position: relative;
    }
    .#{$prefix}-navbar-menu-popover {
      display: block;
    }
    .#{$prefix}-content {
      display: flex;
      flex-direction: column;
      > .#{$prefix}-row {
        flex-grow: 1;
      }
      > .#{$prefix}-footer {
        flex-basis: auto;
      }
    }
  }
}

// data environment
body[data-env]::before {
  background-color: #ddd;
  border: 2px solid #fafafa;
  display: inline-block;
  font-size: 14px;
  font-weight: bold;
  padding: 52px 50px 2px;
  content: attr(data-env);
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1170;
  transform: translateY(-50%) translateX(-50%) rotate(-45deg);
  text-transform: uppercase;
}

body[data-env='']::before,
body[data-env='prod']::before,
body[data-env='production']::before,
body[data-env='hidden']::before {
  display: none;
}

body[data-env='development']::before {
  content: 'dev';
}

